2003-03-03  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* scripts/anjuta_import.sh.in: Improve project import
	* src/search-replace.c: Bugfixes.
	* scripts/anjuta_first_run.sh.in: Check for GNU m4
	* Save file browser preferences in session, not project
	* NEWS: Started release notes for 1.0.2
	* anjuta.prj, an_file_view.[ch], project_dbase.c, session.[ch]:
	File browser preferences saved to session, not project.
	* src/mainmenu_callbacks.c, src/preferences.[ch]: Fixed GCC
	warnings.

2003-03-01  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* anjuta.spec.in, configure.in, data/Makefile.am
	, data/welcome.txt.in, data/licence.txt, scripts/Makefile.am
	, srcipts/anjuta_first_time.sh.in, src/anjuta.c
	, src/mainmenu_callbacks.[ch], src/main_menubar_def.h:Improved
        the first-time run dialog.
	* anjuta.glade: Improved the Search/Replace UI

2003-02-28  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* anjuta.glade, src/controls.c, src/main_menubar.[ch]
	, src/main_menubar_def.h, src/mainmenu_callbasks.[ch]
	, src/search-replace.[ch], More Search/Replace and GUI
	 cleanups from Jean-Noel and me.

2003-02-27  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* src/project_dbase.c, src/anjuta.c, src/launcher.c: Bug fixes.

2003-02-26  Naba Kumar  <naba@gnome.org>
	* manuals/C/anjuta-faqs/anjuta-faqs.sgml, FUTURE, Makefile.am:
	Updated faq and removed FUTURE, because it does not show
	accurate information.
	
2003-02-26  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* src/anjuta-tools.c: Fixed some bugs. Added accel support.

2003-02-24  Joe Harnish <bigJoe@linuxmail.org>
	* fixed omf errors

2003-02-24  Naba Kumar  <naba@gnome.org>

	* data/properties/html.properties,
	(new) data/properties/php.properties,
	data/properties/anjuta.properties: Fixed php highlighting bug
	(highlight was lost) by separating the php properties into
	a separate file.
