@@ -49,6 +49,7 @@ fi
 
 # The following list si incomplete - please feel free to add to it.
 checkProgram 'GNU Grep' 'grep --version | grep GNU' 'ftp.gnu.org'
+checkProgram 'GNU Grep' 'm4 --version | grep GNU' 'ftp.gnu.org'
 checkProgram 'GNU C' 'gcc --version' 'gcc.gnu.org'
 checkProgram 'GNU Make' 'gmake --version' 'ftp.gnu.org'
 checkProgram 'Perl' 'perl --version' 'www.perl.com'
