@@ -37,7 +37,10 @@ enum _SessionSectionTypes {
 	SECTION_FIND_IN_FILES_SETTINGS,
 	SECTION_FIND_IN_FILES_PROFILES,
 	SECTION_GENERAL,
-
+	SECTION_PROJECT_TREE,
+	SECTION_SYMBOL_TREE,
+	SECTION_FILE_TREE,
+	SECTION_FILE_VIEW,
 	SECTION_END
 };
 
