@@ -6,10 +6,11 @@ New: First-run dialog.
 New: MRU notebook tabs
 Updated: Tools support (shortcuts, bugfixes, etc.)
 Updated: Scintilla upgraded to 1.50 +
-Bug fix: PHP highlighting works correctly.
 Updated: Tagmanager fixes.
 Updated: Jump between buffers using shortcut
 Updated: Asynchoronous update of symbol/file browser
+Updated: Project Import improvements
+Bug fix: PHP highlighting works correctly.
 
 Anjuta 1.0.1:		(xth June 2002)			-- Naba Kumar
 
